--- a/masterpage.html
+++ b/masterpage.html
@@ -11,14 +11,16 @@
 <div class="textstyle1">
 <a href="index.html"><img src="rc_images/semofleetlogo1080.jpg" width="1024" height="390" id="img_3c70b732" alt="" title="" border="0" /></a>  </div>
 <div class="textstyle2">
-<span class="textstyle3"><br/></span><div id="menu_12dc9f48"><div  class="menuholder1"><a href="javascript:void(0);">
+<span class="textstyle3"><br/></span>  </div>
+<div class="textstyle1">
+<div id="menu_12dc9f48"><div  class="menuholder1"><a href="javascript:void(0);">
 	<div id="menuentry_24ad08ac"  class="menustyle1 menu_12dc9f48_mainMenuEntry mobileEntry">
 		<div class="menuentry_text1">
   <span class="textstyle4">&#8801;</span>
 		</div>
 	</div>
 </a>
-<a href="whoweare.html" style="text-decoration:none">
+<a href="index.html" style="text-decoration:none">
 	<div id="menuentry_3b4af324"  class="menustyle2 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
   <span class="textstyle5">Who We Are</span>
@@ -51,7 +53,7 @@
 	<script type="text/javascript">
 		var js_menu_12dc9f48= new wsp_menu('menu_12dc9f48', 'menu_12dc9f48', 10, null, true);
 
-		js_menu_12dc9f48.createMenuForItem('menuentry_24ad08ac', ["  <span class=\"textstyle6\">Who We Are</span> ", 'whoweare.html', '',
+		js_menu_12dc9f48.createMenuForItem('menuentry_24ad08ac', ["  <span class=\"textstyle6\">Who We Are</span> ", 'index.html', '',
 		                                   "  <span class=\"textstyle6\">Services We Offer</span> ", 'services.html', '',
 		                                   "  <span class=\"textstyle6\">Photos and Video</span> ", 'media.html', '',
 		                                   "  <span class=\"textstyle6\">Contact Us</span> ", 'contact.html', '']);
