--- a/media.html
+++ b/media.html
@@ -11,14 +11,16 @@
 <div class="textstyle1">
 <a href="index.html"><img src="rc_images/semofleetlogo1080.jpg" width="1024" height="390" id="img_3c70b732" alt="" title="" border="0" /></a>  </div>
 <div class="textstyle2">
-<span class="textstyle3"><br/></span><div id="menu_12dc9f48"><div  class="menuholder1"><a href="javascript:void(0);">
+<span class="textstyle3"><br/></span>  </div>
+<div class="textstyle1">
+<div id="menu_12dc9f48"><div  class="menuholder1"><a href="javascript:void(0);">
 	<div id="menuentry_24ad08ac"  class="menustyle1 menu_12dc9f48_mainMenuEntry mobileEntry">
 		<div class="menuentry_text1">
   <span class="textstyle4">&#8801;</span>
 		</div>
 	</div>
 </a>
-<a href="whoweare.html" style="text-decoration:none">
+<a href="index.html" style="text-decoration:none">
 	<div id="menuentry_3b4af324"  class="menustyle2 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
   <span class="textstyle5">Who We Are</span>
@@ -51,7 +53,7 @@
 	<script type="text/javascript">
 		var js_menu_12dc9f48= new wsp_menu('menu_12dc9f48', 'menu_12dc9f48', 10, null, true);
 
-		js_menu_12dc9f48.createMenuForItem('menuentry_24ad08ac', ["  <span class=\"textstyle6\">Who We Are</span> ", 'whoweare.html', '',
+		js_menu_12dc9f48.createMenuForItem('menuentry_24ad08ac', ["  <span class=\"textstyle6\">Who We Are</span> ", 'index.html', '',
 		                                   "  <span class=\"textstyle6\">Services We Offer</span> ", 'services.html', '',
 		                                   "  <span class=\"textstyle6\">Photos and Video</span> ", 'media.html', '',
 		                                   "  <span class=\"textstyle6\">Contact Us</span> ", 'contact.html', '']);
@@ -63,14 +65,88 @@
 	</script>
 </div></div><div  id="placeh_91ac625" >
   <div class="textstyle1">
-<div id="container_d7f7436"><div id="container_d7f7436_padding" ><div class="textstyle1"><div id="container_7446523"><div id="container_7446523_padding" ><div class="textstyle2">    <span class="textstyle7">Photos and Video<br/></span>
-    <span class="textstyle8"> </span>
-    <span class="textstyle9"><br/></span>
-</div>
-</div></div></div>
+<div id="container_d7f7436"><div id="container_d7f7436_padding" ><div class="textstyle1"><div id="container_7446523"><div id="container_7446523_padding" ><div class="textstyle1"><span class="textstyle7">Photos and Video</span></div>
+<div class="textstyle2"><span class="textstyle7"><br/></span></div>
+<div class="textstyle1"><table id="table_433edc8a" cellpadding="3" cellspacing="1" >	<tr>
+		<td width="50%" height="102px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_64589801">
+      <div class="textstyle2">
+        <span class="textstyle8">Recent RAM 1500 purchase by SERVPRO of Cape Girardeau and Scott Counties</span>
+        </div>
+      </div>
+		</td>
+		<td width="50%" height="102px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_52bab2b0">
+      <div class="textstyle2">
+<div id="gallery_78abf229">
+	<script type="text/javascript" src="rc_images/wsp_gallery.js"></script>
+<div class="galleryimgcontainer" ><a href="javascript:wsp_gallery.openlayer('rc_images/servpro_1200x900.jpg',1200,900,true, 'gallery_78abf229');"><img src="rc_images/rwb_1.jpg" id="gallery_78abf229_img1" width="640" height="360" /> </a></div></div>        </div>
+      </div>
+		</td>
+	</tr>
+	<tr>
+		<td width="50%" height="80px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_149edc9c">
+      <div class="textstyle2">
+        <span class="textstyle8">Tri-State's awesome custom graphics through one of our partners</span>
+        </div>
+      </div>
+		</td>
+		<td width="50%" height="80px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_33ab7473">
+      <div class="textstyle2">
+<div id="gallery_6d1c74c3">
+	<script type="text/javascript" src="rc_images/wsp_gallery.js"></script>
+<div class="galleryimgcontainer" ><a href="javascript:wsp_gallery.openlayer('rc_images/tristate_1200x900.jpg',1200,900,true, 'gallery_6d1c74c3');"><img src="rc_images/rwb_2.jpg" id="gallery_6d1c74c3_img1" width="640" height="360" /> </a></div></div>        </div>
+      </div>
+		</td>
+	</tr>
+	<tr>
+		<td width="50%" height="80px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_11886076">
+      <div class="textstyle2">
+        <span class="textstyle8">One of the two huge inventory lots available for us to choose from</span>
+        </div>
+      </div>
+		</td>
+		<td width="50%" height="80px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_6199f115">
+      <div class="textstyle2">
+<video  id="video_69563e92" src="rc_images/ramlot1.mp4" controls="controls" >
+Your browser does not support the video element.
+</video>        </div>
+      </div>
+		</td>
+	</tr>
+	<tr>
+		<td width="50%" height="36px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_9faa198">
+      <div class="textstyle2">
+        <span class="textstyle8">Hole-In-One Contest!</span>
+        </div>
+      </div>
+		</td>
+		<td width="50%" height="36px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_32a9e224">
+      <div class="textstyle2">
+<div id="gallery_6409f847">
+	<script type="text/javascript" src="rc_images/wsp_gallery.js"></script>
+<div class="galleryimgcontainer" ><a href="javascript:wsp_gallery.openlayer('rc_images/holeinone.jpg',720,960,true, 'gallery_6409f847');"><img src="rc_images/rwb_3.jpg" id="gallery_6409f847_img1" width="640" height="360" /> </a></div></div>        </div>
+      </div>
+		</td>
+	</tr>
+	<tr>
+		<td width="50%" height="59px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_23baf3ea">
+      <div class="textstyle2">
+        <span class="textstyle8">Cape Girardeau Christmas Parade 2023</span>
+        </div>
+      </div>
+		</td>
+		<td width="50%" height="59px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_70e60e76">
+      <div class="textstyle2">
+<div id="gallery_1354b0f">
+	<script type="text/javascript" src="rc_images/wsp_gallery.js"></script>
+<div class="galleryimgcontainer" ><a href="javascript:wsp_gallery.openlayer('rc_images/parade1_1200x857.jpg',1200,857,true, 'gallery_1354b0f');"><img src="rc_images/rwb_4.jpg" id="gallery_1354b0f_img1" width="640" height="360" /> </a></div><div class="galleryimgcontainer" ><a href="javascript:wsp_gallery.openlayer('rc_images/parade2_1200x856.jpg',1200,856,true, 'gallery_1354b0f');"><img src="rc_images/rwb_5.jpg" id="gallery_1354b0f_img2" width="640" height="360" /> </a></div><div class="galleryimgcontainer" ><a href="javascript:wsp_gallery.openlayer('rc_images/parade3_1200x857.jpg',1200,857,true, 'gallery_1354b0f');"><img src="rc_images/rwb_6.jpg" id="gallery_1354b0f_img3" width="640" height="360" /> </a></div><div class="galleryimgcontainer" ><a href="javascript:wsp_gallery.openlayer('rc_images/parade4_1200x857.jpg',1200,857,true, 'gallery_1354b0f');"><img src="rc_images/rwb_7.jpg" id="gallery_1354b0f_img4" width="640" height="360" /> </a></div><div class="galleryimgcontainer" ><a href="javascript:wsp_gallery.openlayer('rc_images/parade5_1200x856.jpg',1200,856,true, 'gallery_1354b0f');"><img src="rc_images/rwb_8.jpg" id="gallery_1354b0f_img5" width="640" height="360" /> </a></div></div>        </div>
+      </div>
+		</td>
+	</tr>
+</table></div>
+<div style="clear:both"></div></div></div></div>
 <div style="clear:both"></div></div></div>    </div>
   <div class="textstyle2">
-<span class="textstyle10"><br/></span>    </div>
+<span class="textstyle9"><br/></span>    </div>
 </div>
   </div>
 </body>
