--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="textstyle2">
 <span class="textstyle3"><br/></span>  </div>
 <div class="textstyle1">
-<div id="menu_12dc9f48"><div  class="menuholder1"><a href="javascript:void(0);">
+<div id="menu_12dc9f48"><div  id="menu_12dc9f48_menualignmentwrapper" ><div  class="menuholder1"><a href="javascript:void(0);">
 	<div id="menuentry_24ad08ac"  class="menustyle1 menu_12dc9f48_mainMenuEntry mobileEntry">
 		<div class="menuentry_text1">
   <span class="textstyle4">&#8801;</span>
@@ -63,25 +63,25 @@
 		js_menu_12dc9f48.createMenuForItem('menuentry_4813649a', []);
 
 	</script>
-</div></div><div  id="placeh_91ac625" >
+</div></div></div><div  id="placeh_91ac625" >
   <div class="textstyle1">
 <div id="container_62a35519"><div id="container_62a35519_padding" ><div class="textstyle1"><div id="container_52a9ad69"><div class="textstyle1"><span class="textstyle7"><br/>We Are SEMO Fleet Sales!</span></div>
-<div class="textstyle2"><span class="textstyle8"><br/></span><div id="container_381e378b"><div id="container_381e378b_padding" ><div class="textstyle2"><div id="container_235882ac"><div class="textstyle2"><span class="textstyle9">SEMO Fleet Sales is redefining convenience in commercial vehicle acquisition! As your trusted partner in the world of fleet sales, we're here to revolutionize how you get the vehicles your business needs. SEMO knows the ins and outs of the commercial fleet industry like no one else. Our mission is to ensure that you never have to step foot on a dealership lot to get the perfect vehicles for your business!<br/><br/></span></div>
+<div class="textstyle2"><span class="textstyle8"><br/></span><div id="container_381e378b"><div id="container_381e378b_padding" ><div class="textstyle2"><div id="container_235882ac"><div class="textstyle2"><span class="textstyle9">SEMO Fleet Sales is redefining convenience in commercial vehicle acquisition! As your trusted partner in the world of fleet sales, we are here to revolutionize how you get the vehicles your business needs. SEMO Fleet Sales knows the ins and outs of the commercial fleet industry like no one else. Our mission is to ensure that you never have to step foot on a dealership lot to get the perfect vehicles for your business!<br/><br/></span></div>
 <div class="textstyle1"><span class="textstyle10">What Sets Us Apart?</span></div>
 <div class="textstyle2"><span class="textstyle9"><br/></span><ul id="ul_508c6e15" class="ulstyle1">
-<li><span class="textstyle11">No More Dealership Hassles</span>    <span class="textstyle9"> - Say goodbye to long hours at the dealership. SEMO takes the hassle out of fleet sales by bringing the dealership experience to you.</span>
+<li><span class="textstyle11">No More Dealership Hassles</span>    <span class="textstyle9"> - Say goodbye to long hours at the dealership. We take the hassle out of fleet sales by bringing the dealership experience to you.</span>
 </li>
 </ul>
     <span class="textstyle9">&nbsp;</span>
 <ul id="ul_5e6975ff" class="ulstyle1">
 <li>    <span class="textstyle11">Tailored Solutions</span>
-    <span class="textstyle9"> - We understand that every business has unique needs. SEMO works closely with you to find the right vehicles that match your requirements, whether it's one van or an entire fleet.</span>
+    <span class="textstyle9"> - We understand that every business has unique needs and we work closely with you to find the right vehicles that match your requirements, whether it's one van or an entire fleet.</span>
 </li>
 </ul>
     <span class="textstyle9">&nbsp;</span>
 <ul id="ul_593f5171" class="ulstyle1">
 <li>    <span class="textstyle11">Competitive Pricing</span>
-    <span class="textstyle9"> - SEMO leverages its industry connections to get you the best deals and pass the savings on to your business.</span>
+    <span class="textstyle9"> - We leverage our industry connections to get you the best deals and pass the savings on to your business.</span>
 </li>
 </ul>
     <span class="textstyle9">&nbsp;</span>
@@ -99,5 +99,26 @@
 <span class="textstyle16"><br/></span>    </div>
 </div>
   </div>
+<div class="textstyle2">
+<span class="textstyle3"><br/></span>  </div>
+<div class="textstyle1">
+<table id="table_6385801d" cellpadding="3" cellspacing="1" >	<tr>
+		<td width="33%" height="57px" style="vertical-align: middle; overflow:hidden; ">  <div id="cell_40c8368a">
+    <div class="textstyle2">
+<img src="rc_images/icons8_phone_16.png" width="16" height="16" id="img_445fda0d" alt="" title="" /><span class="textstyle17">    </span><span class="textstyle18">(573) 906-7969</span>      </div>
+    </div>
+		</td>
+		<td width="33%" height="57px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_50cb666a">
+    <div class="textstyle2">
+<img src="rc_images/icons8_email_ios_16_filled_16.png" width="16" height="16" id="img_5cbd2978" alt="" title="" /><span class="textstyle17">    </span><span class="textstyle18"><a href="mailto:eric@semofleet.com" target="_blank">eric@semofleet.com</a></span>      </div>
+    </div>
+		</td>
+		<td width="33%" height="57px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_b749fb5">
+    <div class="textstyle2">
+<img src="rc_images/icons8_facebook_ios_16_filled_16.png" width="16" height="16" id="img_53797471" alt="" title="" /><span class="textstyle17">    </span><span class="textstyle18"><a href="https://www.facebook.com/profile.php?id=61551028208545" target="_blank">Semo Fleet Sales</a></span><span class="textstyle17"><br/><br/></span>      </div>
+    </div>
+		</td>
+	</tr>
+</table>  </div>
 </body>
 </html>
