--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
 <div class="textstyle2">
 <span class="textstyle3"><br/></span>  </div>
 <div class="textstyle1">
-<div id="menu_12dc9f48"><div  class="menuholder1"><a href="javascript:void(0);">
+<div id="menu_12dc9f48"><div  id="menu_12dc9f48_menualignmentwrapper" ><div  class="menuholder1"><a href="javascript:void(0);">
 	<div id="menuentry_24ad08ac"  class="menustyle1 menu_12dc9f48_mainMenuEntry mobileEntry">
 		<div class="menuentry_text1">
   <span class="textstyle4">&#8801;</span>
@@ -63,7 +63,7 @@
 		js_menu_12dc9f48.createMenuForItem('menuentry_4813649a', []);
 
 	</script>
-</div></div><div  id="placeh_91ac625" >
+</div></div></div><div  id="placeh_91ac625" >
   <div class="textstyle1">
 <div id="container_4473df6d"><div id="container_4473df6d_padding" ><div class="textstyle1"><div id="container_42a8e7dd"><div class="textstyle1"><span class="textstyle7"><br/>Services We Offer<br/><br/></span></div>
 <div class="textstyle2"><div id="container_3f2be38f"><div id="container_3f2be38f_padding" ><div class="textstyle2"><div id="container_4c93732e"><div class="textstyle2"></div>
@@ -75,5 +75,26 @@
 <span class="textstyle11"><br/></span>    </div>
 </div>
   </div>
+<div class="textstyle2">
+<span class="textstyle3"><br/></span>  </div>
+<div class="textstyle1">
+<table id="table_6385801d" cellpadding="3" cellspacing="1" >	<tr>
+		<td width="33%" height="57px" style="vertical-align: middle; overflow:hidden; ">  <div id="cell_40c8368a">
+    <div class="textstyle2">
+<img src="rc_images/icons8_phone_16.png" width="16" height="16" id="img_445fda0d" alt="" title="" /><span class="textstyle12">    </span><span class="textstyle13">(573) 906-7969</span>      </div>
+    </div>
+		</td>
+		<td width="33%" height="57px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_50cb666a">
+    <div class="textstyle2">
+<img src="rc_images/icons8_email_ios_16_filled_16.png" width="16" height="16" id="img_5cbd2978" alt="" title="" /><span class="textstyle12">    </span><span class="textstyle13"><a href="mailto:eric@semofleet.com" target="_blank">eric@semofleet.com</a></span>      </div>
+    </div>
+		</td>
+		<td width="33%" height="57px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_b749fb5">
+    <div class="textstyle2">
+<img src="rc_images/icons8_facebook_ios_16_filled_16.png" width="16" height="16" id="img_53797471" alt="" title="" /><span class="textstyle12">    </span><span class="textstyle13"><a href="https://www.facebook.com/profile.php?id=61551028208545" target="_blank">Semo Fleet Sales</a></span><span class="textstyle12"><br/><br/></span>      </div>
+    </div>
+		</td>
+	</tr>
+</table>  </div>
 </body>
 </html>
