--- a/org_media.html
+++ b/org_media.html
@@ -68,13 +68,13 @@
 <div id="container_d7f7436"><div id="container_d7f7436_padding" ><div class="textstyle1"><div id="container_7446523"><div id="container_7446523_padding" ><div class="textstyle1"><span class="textstyle7">Photos and Video</span></div>
 <div class="textstyle2"><span class="textstyle7"><br/></span></div>
 <div class="textstyle1"><table id="table_433edc8a" cellpadding="3" cellspacing="1" >	<tr>
-		<td width="36%" height="146px" style="vertical-align: middle; overflow:hidden; ">    <div id="cell_64589801">
+		<td width="50%" height="102px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_64589801">
       <div class="textstyle2">
         <span class="textstyle8">Recent RAM 1500 purchase by SERVPRO of Cape Girardeau and Scott Counties</span>
         </div>
       </div>
 		</td>
-		<td width="63%" height="146px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_52bab2b0">
+		<td width="50%" height="102px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_52bab2b0">
       <div class="textstyle2">
 <div id="gallery_78abf229">
 	<script type="text/javascript" src="rc_images/wsp_gallery.js"></script>
@@ -83,13 +83,13 @@
 		</td>
 	</tr>
 	<tr>
-		<td width="36%" height="124px" style="vertical-align: middle; overflow:hidden; ">    <div id="cell_149edc9c">
+		<td width="50%" height="80px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_149edc9c">
       <div class="textstyle2">
         <span class="textstyle8">Tri-State's awesome custom graphics through one of our partners</span>
         </div>
       </div>
 		</td>
-		<td width="63%" height="124px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_33ab7473">
+		<td width="50%" height="80px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_33ab7473">
       <div class="textstyle2">
 <div id="gallery_6d1c74c3">
 	<script type="text/javascript" src="rc_images/wsp_gallery.js"></script>
@@ -98,13 +98,13 @@
 		</td>
 	</tr>
 	<tr>
-		<td width="36%" height="102px" style="vertical-align: middle; overflow:hidden; ">    <div id="cell_11886076">
+		<td width="50%" height="80px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_11886076">
       <div class="textstyle2">
         <span class="textstyle8">One of the two huge inventory lots available for us to choose from</span>
         </div>
       </div>
 		</td>
-		<td width="63%" height="102px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_6199f115">
+		<td width="50%" height="80px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_6199f115">
       <div class="textstyle2">
 <video  id="video_69563e92" src="rc_images/ramlot1.mp4" controls="controls" >
 Your browser does not support the video element.
@@ -113,13 +113,13 @@ Your browser does not support the video element.
 		</td>
 	</tr>
 	<tr>
-		<td width="36%" height="36px" style="vertical-align: middle; overflow:hidden; ">    <div id="cell_9faa198">
+		<td width="50%" height="36px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_9faa198">
       <div class="textstyle2">
         <span class="textstyle8">Hole-In-One Contest!</span>
         </div>
       </div>
 		</td>
-		<td width="63%" height="36px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_32a9e224">
+		<td width="50%" height="36px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_32a9e224">
       <div class="textstyle2">
 <div id="gallery_6409f847">
 	<script type="text/javascript" src="rc_images/wsp_gallery.js"></script>
@@ -128,13 +128,13 @@ Your browser does not support the video element.
 		</td>
 	</tr>
 	<tr>
-		<td width="36%" height="79px" style="vertical-align: middle; overflow:hidden; ">    <div id="cell_23baf3ea">
+		<td width="50%" height="59px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_23baf3ea">
       <div class="textstyle2">
         <span class="textstyle8">Cape Girardeau Christmas Parade 2023</span>
         </div>
       </div>
 		</td>
-		<td width="63%" height="79px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_70e60e76">
+		<td width="50%" height="59px" style="vertical-align: top; overflow:hidden; ">    <div id="cell_70e60e76">
       <div class="textstyle2">
 <div id="gallery_1354b0f">
 	<script type="text/javascript" src="rc_images/wsp_gallery.js"></script>
